# heightmap_spawner

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  package.xml
.github/ISSUE_TEMPLATE/: bug_report.md
example/: berlin.yaml  empty.sdf  map.rviz
launch/: example.launch.py  spawner.launch.py
src/: heightmap_spawner.cpp
