<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>heightmap_spawner</name>
  <version>0.1.0</version>
  <description>Gazebo Harmonic heightmap spawner from ROS2 map</description>
  <maintainer email="joshuajdmk@gmail.com">Joshua J. Damanik</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>gz-transport13</depend>
  <depend>opencv2</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
